# bazel-distribution

./: .gitignore  BUILD  CONTRIBUTING.md  LICENSE  MODULE.bazel  NOTICE  README.md  WORKSPACE  bazelbuild_rules_pkg-allow-long-filenames.patch  bazelbuild_rules_pkg-fix-bzl-library-visibility.patch  bazelbuild_rules_pkg-fix-tarfile-format.patch  bazelbuild_rules_python-export-requirements-bzl-for-stardoc.patch  doc_hub.bzl
.circleci/: config.yml
.factory/: automation.yml
.github/: CODEOWNERS
.grabl/: automation.yml
apt/: BUILD  generate_depends_file.py  rules.bzl
apt/pkg_deb_modified_from_bazel/: BUILD  archive.py  make_deb.py  path.bzl  pkg.bzl
apt/templates/: BUILD  deploy.py  deploy.sh
artifact/: rules.bzl
artifact/templates/: deploy.py
aws/: BUILD  packer.template.json  rules.bzl
azure/: packer.template.json  rules.bzl
brew/: BUILD  rules.bzl
brew/templates/: BUILD  deploy.py  deploy_tap.py
common/: BUILD  Logging.kt  Property.kt  assemble-versioned.py  assemble_versioned.bzl  checksum.bzl  common.py  dependencies.bzl  deps.bzl  generate_json_config.bzl  java_deps.bzl  java_deps.py  rules.bzl  tgz2zip.bzl  tgz2zip.py
common/assemble_versioned/: BUILD  assemble-versioned.py  rules.bzl
common/checksum/: rules.bzl
common/cloudsmith/: BUILD  cloudsmith.py  deps.bzl  requirements.txt
crates/: BUILD  CrateAssembler.kt  CrateDeployer.kt  deps.bzl  rules.bzl
distribution/: BUILD  archiver.py  java_deps.py  rules.bzl  tgz2zip.py
docs/: BUILD
gcp/: BUILD  packer.template.json  rules.bzl
github/: BUILD  dependencies.bzl  deploy.py  deployment.py  deps.bzl  rules.bzl
helm/: rules.bzl
maven/: BUILD  JarAssembler.kt  PomGenerator.kt  Repackager.kt  _pom_replace_version.py  assemble.py  dependencies.bzl  deployment_rules_builder.py  deps.bzl  new_rules.bzl  pom_replace_version.py  rules.bzl
npm/: BUILD  DeployNPM.kt  Deployer.kt  Options.kt  README.md  assemble.py  rules.bzl
nuget/: nuget_pack.bzl  rules.bzl
packer/: BUILD  dependencies.bzl  deps.bzl  rules.bzl
pip/: BUILD  assemble.py  deps.bzl  repackage.py  replace_imports.py  requirements.txt  rules.bzl
platform/: BUILD  constraints.bzl
rpm/: BUILD  README-GRAKN.txt  generate_spec_file.py  make_rpm.py  rpm.bzl  rules.bzl
targz/: BUILD
zip/: rules.bzl
(+110 files in other folders)
